syntax = "proto3";
import "oprc-class.proto";
import "oprc-function.proto";

option java_multiple_files = true;
option java_package = "org.hpcclab.oaas.proto";

package oprc;

message ProtoOPackage {
  string name = 1;
  repeated ProtoOClass classes = 2;
  repeated ProtoOFunction functions = 3;
  repeated string required = 4;
  bool disable = 5;
}
